--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bevy_pg_calendar"
-version = "1.0.9"
+version = "1.0.10"
 edition = "2021"
 description = "PG (PatchGames) Calendar to be used with Bevy"
 license = "MIT OR Apache-2.0"
@@ -11,8 +11,8 @@ cron = []
 calendar = []
 
 [dependencies]
-bevy = { version = "0.13.2", default-features = false, features = []}
-serde = "1.0.197"
-serde_json = "1.0.114"
-chrono = {version = "0.4.35", default-features = false, features = ["serde"]}
+bevy = { version = "0.14.0", default-features = false, features = []}
+serde = {version="1.0.203", features = ["derive"] }
+serde_json = {version="1.0.120"}
+chrono = {version = "0.4.38", default-features = false, features = ["serde"]}
 
