--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ cron = []
 calendar = []
 
 [dependencies]
-bevy = { version = "0.15.0-rc.3", default-features = false, features = []}
-serde = {version="1.0.215", features = ["derive"] }
-serde_json = {version="1.0.132"}
+bevy = { version = "0.15.0", default-features = false, features = []}
+serde = {version="1.0", features = ["derive"] }
+serde_json = {version="1.0"}
 chrono = {version = "0.4.38", default-features = false, features = ["serde"]}
 
