--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ cron = []
 calendar = []
 
 [dependencies]
-bevy = {version = "0.16.0-rc.3", default-features = false, features = []}
+bevy = {version = "0.16.0", default-features = false, features = []}
 serde = {version="1.0", features = ["derive"] }
 serde_json = {version="1.0"}
 chrono = {version = "0.4.40", default-features = false, features = ["serde"]}
